* Replaced the majority of `require_once` calls with `locate_template` calls
* Replaced `global` variable calls with `new` class instances
* Update to use `preg_match_all` in OpusPrimusGallery featured and secondary id methods

= CSS =
* Added new typography styles for better reading
* Added styles for the "BNS Login" plugin
* Added `clear: both` to `footer`
* Change default `ul` list-style property to `none inside`
* Hide the post/page breadcrumbs in mobile displays
* Hide "Search" button for search form
* Removed duplicate definitions from media queries stylesheet
* Removed unused `div#top-navigation-menu` definition
* Removed unused `nav div.nav ul li` definition
* Updated `editor-style.css` to match new typography of theme
* Updated galleries styles to use HTML5 markup
* Updated font-size of excerpt more link symbol to 35px from 200%

= JavaScript =
* Integrated "SlickNav" (Created by Josh Cope - @computerwolf) for mobile menu support
* Integrated "FitVids" built by Chris Coyier (http://chriscoyier.net/) and Paravel (http://paravelinc.com/)

= Miscellaneous
* Added Contact Form 7 compatibility
* Added BNS Login compatibility to use `dashicons` display
* Removed `works-in-progress` folder from theme
* Updated `readme.txt` to note the use and license of SlickNav by Josh Cope
* Updated `readme.txt` to note the use and license of FitVids by Chris Coyier and Paravel
* Updated `style.css` description to emphasize the addition of the SlickNav and FitVids libraries
* Updated `screenshot.png` to better reflect latest release
* Updated `hooks-actions.txt` with new additions

/** ------------------------------------------------------------------------- */
== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added new method `OpusPrimusNavigation::pagination_wrapped` to provide actions hooks before and after the `pagination` method