@@ -78,6 +78,7 @@
  * Added new typography styles for better reading
  * Added styles for the "BNS Login" plugin
  * Added `clear: both` to `footer`
+ * Added `width: auto;` for `th` and `td` elements
  * Change default `ul` list-style property to `none inside`
  * Hide "Search" button for search form
  * Removed unused `div#top-navigation-menu` definition
@@ -95,11 +96,14 @@
  * === Clearance ===
  * === Menu Related Elements ===
  * === Breadcrumbs ===
+ *
  * === Navigation ===
  * Pagination Method
+ *
  * === Post Elements ===
  * Meta Byline
  * Buttons
+ *
  * === Page Elements ===
  * === Search ===
  *
@@ -114,6 +118,7 @@
  *
  * === General Images ===
  * Galleries - One to Nine columns
+ *
  * === Attachment: Image ===
  *
  * === Authors ===
@@ -678,6 +683,11 @@ sup {
 table {
 	background-color: transparent;
 	width: 100%;
+}
+
+td,
+th {
+	width: auto;
 }
 
 td {
